<resources>
    <string name="freeway_coffee">Freeway Coffee</string>
    <string name="fc_item_list_view">FC Item List</string>
    <string name="loginemail">Email</string>
    <string name="password">Password</string>
    <string name="login_automatically">Login Automatically</string>
    <string name="signupemail">Email:</string>
    <string name="password_again">Password (Again)</string>
    <string name="signin">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="signupnickname">Name</string>
    <string name="error_email_cannot_be_empty">Email Address Cannot Be Empty</string>
    <string name="error_nickname_cannot_be_empty">Name Cannot Be Empty</string>
    <string name="error_password_cannot_be_empty">Password Cannot Be Empty</string>
    <string name="error_passwords_do_not_match">Passwords Do Not Match</string>
    <string name="welcome_user">Welcome,</string>
    <string name="location_none">Choose A Location</string>
    <string name="credit_card_none">Add A Credit Card</string>
    <string name="add_an_item">Add/Edit Items</string>
    <string name="go_back">Back</string>
    <string name="none_text">None</string>
    <string name="select_item">Select</string>
    <string name="go_cancel">Cancel</string>
    <string name="drinks_string">Drinks</string>
    <string name="add_a_drink">Add A Drink</string>
    <string name="select_a_drink_type">Select A Drink Type</string>
    <string name="fc_drink_name">&quot;Drink Name&quot;</string>
    <string name="fc_always_include_in_order">&quot;Always include in order&quot;</string>
    <string name="fc_drink_type">&quot;Drink Type: &quot;</string>
    <string name="fc_build_your_drink">Build Your Drink</string>
    <string name="cancel">Cancel</string>
    <string name="fc_add_drink">Add Drink</string>
    <string name="fc_save_drink">Save Drink</string>
    <string name="select_a_drink_option">Select An Option</string>
    <string name="fc_go_to_signup">New User</string>
    <string name="fc_go_to_signon">Already Have An Account ?</string>
    <string name="fc_network_error">&quot;A Network Error Occurred, Please Try again.</string>
    <string name="fc_signing_in">Signing You In.</string>
    <string name="fc_logged_in_ok">Signed in successfully.</string>
    <string name="fc_login_not_successful">&quot;Your Signin Attempt Was Not Successful.\n\n -Check Your Username/Password.\n-If You Don't Have An Account Yet, Signup.&quot;</string>
    <string name="fc_signing_up">&quot;Signing You Up. Please wait...&quot;</string>
    <string name="fc_signed_up_ok">&quot;Signed Up Successfully...&quot;</string>
    <string name="fc_signup_error">&quot;A Problem Occurred Signing Up.&quot;</string>
    <string name="fc_retrieving_items_list">Retrieving Your Order.</string>
    <string name="fc_retrieving_drinks_list">Retrieving Your Drinks List.</string>
    <string name="fc_reset">Reset</string>
    <string name="fc_update">Update</string>
    <string name="fc_set_time_to_location">Set Your Time To This Location</string>
    <string name="fc_location">&quot;Location: &quot;</string>
    <string name="fc_set_time_to">Set Your Time</string>
    <string name="fc_time">&quot;Time: &quot;</string>
    <string name="fc_minutes">&quot;Minutes&quot;</string>
    <string name="fc_oops">Oops, Something Went Wrong</string>
    <string name="fc_updating_location_arrival">Updating Your Arrival Time</string>
    <string name="fc_time_to_location_updated">Your Arrival Time Was Udated</string>
    <string name="fc_nothing_good">An error occurrred.</string>
    <string name="fc_version_error_occurred">&quot;A version error has occurred. You need: &quot;</string>
    <string name="fc_version_you_have">&quot;but you have: &quot;</string>
    <string name="fc_please_download_release">Please dowload the required release</string>
    <string name="fc_credit_cards_accepted">Credit Cards Accepted</string>
    <string name="fc_credit_card_enter_number">Card Number</string>
    <string name="fc_credit_card_exp">Expiration</string>
    <string name="fc_credit_card_exp_month_label">Month(MM)</string>
    <string name="fc_credit_card_exp_year_label">Year(YYYY)</string>
    <string name="fc_add_your_card">add your card</string>
    <string name="fc_credit_card_zip_label">Billing ZIP</string>
    <string name="fc_credit_card_ccv_label">Security Code (CCV)</string>
    <string name="fc_credit_card_number_invalid">The Credit Card Number Is Incorrect</string>
    <string name="fc_credit_card_exp_month_invalid">The Credit Card Expiration month Is Incorrect</string>
    <string name="fc_credit_card_exp_year_invalid">The Credit Card Expiration year Is Invalid</string>
    <string name="fc_credit_card_exp_zip_invalid">The Credit Card Expiration ZIP Is Invalid</string>
    <string name="fc_credit_card_exp_ccv_invalid">The Credit Card Security Code Is Invalid</string>
    <string name="fc_updating_credit_card_info">Updating your Credit Card Information</string>
    <string name="fc_set_your_tag">Set Your Tag</string>
    <string name="fc_user_tag">&quot;TAG: &quot;</string>
    <string name="fc_updating_tag_info">Updating Your Tag Info</string>
    <string name="fc_tag_error">That Tag Is Invalid. Please Try Another.</string>
    <string name="fc_tag_updated">Your Tag Was Updated</string>
    <string name="fc_card_updated">Your Credit Card Was Updated.</string>
    <string name="fc_making_order">Submitting Your Order</string>
    <string name="fc_congratulations">Congratulations</string>
    <string name="fc_order_was_successful">Your Order Was Successful</string>
    <string name="fc_order_id">Order #: </string>
    <string name="fc_total_cost">Total Cost: $</string>
    <string name="fc_order_credit_card">Your Credit Card: </string>
    <string name="fc_order_credit_card_last4">Ending In </string>
    <string name="fc_order_ready_at">Order Will Be Ready At: </string>
    <string name="fc_order_location">Location: </string>
    <string name="fc_sorry">Sorry</string>
    <string name="fc_order_failed">Your Order Failed</string>
    <string name="fc_reason">Reason: </string>
    <string name="fc_your_order">Your Order</string>
    <string name="fc_ok">OK</string>
    <string name="fc_address">Address</string>
    <string name="fc_syrups">Syrups: </string>
    <string name="fc_order_response">Your Order Response</string>
    <string name="fc_back">Back</string>
    <string name="fc_delete_drink_error">There Was An Error Deleting Your Item.</string>
    <string name="fc_user_tag_select_a_make">Select a make...</string>
    <string name="fc_user_tag_select_a_make_first">First, Select A Make...</string>
    <string name="fc_user_tag_make_cannot_have_models">This Make Cannot Have Any Models</string>
    <string name="fc_user_tag_select_a_model">Select A Model...</string>
    <string name="user_tag_select_a_color">Select A Color...</string>
    <string name="user_tag_enter_a_license_plate">Enter a license plate  (optional).</string>
    <string name="make_prefix">&quot;Make: &quot;</string>
    <string name="model_prefix">Model: </string>
    <string name="color_prefix">&quot;Color: &quot;</string>
    <string name="license_prefix">&quot;License: &quot;</string>
    <string name="fc_make">Make</string>
    <string name="fc_model">Model</string>
    <string name="fc_color">Color</string>
    <string name="fc_select">&quot;Select Your: &quot;</string>
    <string name="fc_user_tag_make_does_not_have_models">Make Does Not Have Any Models</string>
    <string name="fc_license_plate_text">License Plate</string>
    <string name="fc_downloading_car_make_model_data">Downloading Car Data</string>
    <string name="fc_retrieving_drinks_menu">Downloading Drinks Menu</string>
    <string name="fc_cancel">Cancel</string>
    <string name="fc_new_drink">New Drink</string>
    <string name="fc_please_select_a">Please Select a</string>
    <string name="fc_user_drink_extra">Extra Options</string>
    <string name="fc_extra">Notes</string>
    <string name="fc_map">Map</string>
    <string name="fc_hours">Hours</string>
    <string name="fc_gps">GPS</string>
    <string name="fc_about">About</string>
    <string name="fc_diagnostics">Send Diag</string>
    <string name="fc_view_order">View Order</string>
    <string name="fc_no_orders_yet">Sorry, You Haven\'t Made Any Orders Yet.</string>
    <string name="fc_website">Web Site</string>
    <string name="fc_im_here">I\'ve Arrived</string>
    <string name="fc_your_card_charged">Total Charge: </string>
    <string name="fc_must_add_credit_card">Please Add A Credit Card To Order</string>
    <string name="fc_must_add_item_to_order">Please Add A Drink Item To Your Order</string>
    <string name="fc_retrieving_food_menu">Retrieving Food Menu</string>
    <string name="fc_new_food">New Food</string>
    <string name="fc_food_type">Food: </string>
    <string name="fc_edit_food">Edit Food</string>
    <string name="fc_add_food">Add Food</string>
    <string name="select_a_food_option">Select A Food Option</string>
    <string name="fc_load_food_drink_menu">Loading Food &amp; Drink Menu</string>
    <string name="fc_load_food_menu">Loading Food Menu</string>
    <string name="fc_load_drink_menu">Loading Drink Menu</string>
    <string name="fc_delete_food_ok">Item Was Deleted</string>
    <string name="fc_delete_food_error">An Error Occurred Deleting The Item</string>
    <string name="error_code_major">Major Error Code: </string>
    <string name="error_code_minor">Minor Error Code: </string>
    <string name="error_message">Message: </string>
    <string name="fc_order_too_soon">You Already Made An Order Within: </string>
    <string name="fc_send_feedback">Send Feedback</string>
    <string name="fc_feedback">Feedback</string>
    <string name="fc_comments">Comments</string>
    <string name="fc_from">From</string>
    <string name="fc_your_email_address">Your Email Eddress</string>
    <string name="fc_must_enter_email">Please enter an email address</string>
    <string name="fc_must_enter_feedback">Please Enter A Comment</string>
    <string name="fc_schema_error">Schema Error</string>
    <string name="fc_signon_error">Signin Failed</string>
    <string name="select_a_food_type">Select A Food Type</string>
    <string name="fc_order_string">Order</string>
    <string name="fc_user_favorites">Favorites</string>
    <string name="fc_order">Order</string>
    <string name="fc_coffee">Coffee</string>
    <string name="fc_select_food">Select A Dood</string>
    <string name="fc_set_your_vehicle">Set Your Vehicle</string>
    <string name="fc_select_your">Select Your</string>
    <string name="fc_your_licence">Enter Your Licence</string>
    <string name="fc_your_location">Your Location</string>
    <string name="fc_feedback_sent">Your Feedback Was Sent.</string>
    <string name="fc_your">Your</string>
    <string name="fc_finished">Finished</string>
    <string name="fc_existing_user">Existing User</string>
    <string name="fc_adding_your_item">Adding Your Item</string>
    <string name="fc_deleting_your_item">Deleting Your Item</string>
    <string name="fc_editing_your_item">Editing Your Item</string>
    <string name="fc_delete_item_ok">Item Was Deleted</string>
    <string name="fc_action">Action</string>
    <string name="fc_add">Add</string>
    <string name="fc_delete">Delete</string>
    <string name="fc_edit">Edit</string>
    <string name="fc_done">Done</string>
    <string name="fc_order_no_zero_cost">Your order cannot have zero cost</string>
    <string name="fc_phone">Phone:</string>
    <string name="fc_email">Email:</string>
    <string name="fc_ive_arrived">I\'ve Arrived</string>
    <string name="fc_order_submitted">Order Submitted</string>
    <string name="fc_order_was_submitted_successful">Your order was submitted successfully</string>
    <string name="fc_im_here_sent_already">Jones has already been notified that you are here. Your order will be ready soon.</string>
</resources>