<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/fc_background"
    >
    
        
    <LinearLayout
        
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/fc_list_wrapper"
    >
  <LinearLayout

  android:orientation="horizontal"
  android:background="@drawable/fc_list_bg"
  android:id="@+id/fc_user_tag_tag_lay"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
  
      
  <TextView 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:text="@string/fc_extra"
    	android:ellipsize ="none"
    	android:layout_marginLeft="10dp"
  		android:layout_gravity="center_vertical"
    	android:textColor="@color/Black"
    	android:id="@+id/fc_user_drink_extra_label">
    	</TextView>
    	
    	 <EditText
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
    	android:layout_marginRight="10dp"
    	android:layout_marginBottom="10dp"
    	android:lines="3"
    	android:layout_marginLeft="10dp"
    	android:layout_marginTop="20dp"
    	android:scrollHorizontally="false"
    	android:selectAllOnFocus="false"
    	android:textColor="@color/Black"
    	android:background="@drawable/fc_edit_box_bg_drawable"
    	android:gravity="top"
    	
    	android:id="@+id/fc_user_drink_extra_edit">
    </EditText>
    
    
	</LinearLayout>
	<LinearLayout
	android:orientation="horizontal"
	android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="bottom"
    android:gravity="bottom"
    android:background="@drawable/fc_list_bg"
    >
	<Button 
			android:layout_weight="0.5" 
			android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:id="@+id/fc_user_tag_cancel"
            android:onClick="UserCanceled"
            android:layout_gravity="bottom"
            android:text="@string/cancel" />
   
	<Button 
			android:layout_weight="0.5"
			android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fc_drink_extra_option_doit"
            android:onClick="DoUpdateExtra"
            android:layout_gravity="bottom"
            android:text="@string/fc_ok"
             />
    </LinearLayout>
    
	</LinearLayout>
</LinearLayout>
  

