<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:background="@drawable/fc_background"
  android:layout_below="@+id/fc_user_tag_banner"
  android:id="@+id/fc_user_tag_tag_lay"
  android:layout_marginTop="30dp"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  
    <include layout="@layout/fc_header_horiz"/>
    
     <LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:background="@drawable/fc_list_wrapper"
   >
 
  <LinearLayout

  android:orientation="vertical"
  android:background="@drawable/fc_list_bg"
  android:id="@+id/fc_user_tag_tag_lay"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
  <TextView 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:text="@string/fc_license_plate_text"
    	android:ellipsize ="none"
    	android:textColor="@color/Black"
    	android:layout_marginBottom="15dp"
    	android:layout_gravity="center"
    	android:id="@+id/fc_license_plate_label">
    	</TextView>
    	
    	 <EditText
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
    	android:ellipsize="end"
    	android:lines="1"
    	android:textSize="20dp"
    	android:scrollHorizontally="true"
    	android:selectAllOnFocus="false"
    	android:textColor="@color/Black"
    	android:background="@drawable/fc_edit_box_bg_drawable"
    	android:gravity="center"
    	android:layout_marginBottom="15dp"
    	android:id="@+id/fc_license_plate_edit">
    </EditText>
    </LinearLayout>
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="horizontal"
	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:gravity="bottom"
    android:background="@drawable/fc_list_bg"
    >
	<Button 
			android:layout_weight="0.5" 
			android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:id="@+id/fc_user_tag_cancel"
            android:onClick="UserCanceled"
      
            android:text="@string/cancel" />
   
	<Button 
			android:layout_weight="0.5"
			android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fc_user_tag_doit"
            android:onClick="DoUpdateLicense"
            android:layout_gravity="bottom"
            android:text="@string/fc_ok"
             />
</LinearLayout>
  </LinearLayout>
</LinearLayout>

